# python-midi

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Midi  README.md  README.mediawiki  appveyor.yml  mary.mid  pyproject.toml  setup.py  test.py  tox.ini
docs/: cli.rst  concepts.rst  conf.py  index.rst  quickstart.rst
docs/api/: clock.rst  constants.rst  containers.rst  events.rst  fileio.rst  index.rst  sequencer.rst
examples/: example_1.py  example_2.py  example_3.py  timidity.py
scripts/: actor-poc.py  mididump  mididump.py  mididumphw  mididumphw.py  midilisten  midilisten.py  midiplay  midiplay.py  midirecord.py
src/: __init__.py  constants.py  containers.py  events.py  fileio.py  sequencer.py  util.py
src/midi/: __init__.py  clock.py  constants.py  containers.py  events.py  fileio.py  sequencer.py  util.py
src/midi/scripts/: mididump.py  mididumphw.py  midilisten.py  midiplay.py  midirecord.py
src/midi/sequencer/: __init__.py
src/midi/sequencer_alsa/: sequencer.py  sequencer_alsa.i
src/midi/sequencer_osx/: __init__.py  coremidi.py  sequencer.py
src/sequencer_alsa/: .gitignore  __init__.py  sequencer.py  sequencer_alsa.i  sequencer_alsa.py  sequencer_alsa_wrap.c
src/sequencer_alsa/include/: error.h  seq.h  seq_event.h  seq_midi_event.h  seqmid.h
src/sequencer_osx/: CoreMIDI.framework  a.out  backup.i  make.sh  sequencer_osx.i  sequencer_osx.py  sequencer_osx_wrap.c  test  test.c  test.py
src/sequencer_osx/cfstring-typemaps-example-1.0/: PKG-INFO  example.c  example.i  setup.py
tests/: clock_sink.py  clock_source.py  conftest.py  mary_test.py  note_match_test.py  test_clock.py  test_clock_integration.py  test_containers.py  test_events.py  test_events_realtime.py  test_fileio.py  test_sequencer.py  test_varlen.py  tests.py
